--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,8 +8,11 @@ jobs:
     name: ss2
     runs-on: ubuntu-latest
     steps:  
-      - name: echo
-        run: | 
-                echo "ss2"
-    
+     - name : checkout
+       uses: actions/checkout@v3
+
+     - name: Build and push
+       run: |
+               docker build -t vaishnaviwohlig/ss2 .
+               docker push 
 
