--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,3 +17,9 @@ jobs:
                docker build -t vaishnaviwohlig/ss2:${{GITHUB.SHA}} .
                docker push vaishnaviwohlig/ss2:${{GITHUB.SHA}}
 
+               yq e '.spec.template.spec.containers[0].image = "vaishnaviwohlig/ss2:${{ github.sha }}"' deployment.yaml -i
+               git add .
+               git commit -m "image change"
+               git status
+               git push 
+
