--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,8 @@ jobs:
           git status
           
           # Use GitHub token for authentication in the Git commands
-          git remote set-url origin https://${{ github.actor }}:${{ secrets.TOKEN102 }}@github.com/${{ github.repository }}.git
-          git push https://Vaishnavi20011225:${{ secrets.TOKEN102 }}@github.com/Vaishnavi20011225/ss2.git main
+          git remote set-url origin https://Vaishnavi20011225:${{ secrets.TOKEN102 }}@github.com/ss2.git
+          git push
+          # https://Vaishnavi20011225:${{ secrets.TOKEN102 }}@github.com/Vaishnavi20011225/ss2.git main
+          # git push https://Vaishnavi20011225:${{ secrets.TOKEN102 }}@github.com/Vaishnavi20011225/ss2.git main
           git status
