--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,6 @@ jobs:
           git remote get-url origin
           git branch --show-current
           
-          git push -u origin main 
-          # https://Vaishnavi20011225:${{ secrets.TOKEN102 }}@github.com/Vaishnavi20011225/ss2.git main
-          # git push https://Vaishnavi20011225:${{ secrets.TOKEN102 }}@github.com/Vaishnavi20011225/ss2.git main
+          git push -u https://Vaishnavi20011225:${{ secrets.TOKEN102 }}@github.com/ss2.git main 
+          
           git status
