--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,9 +29,9 @@ jobs:
           git pull
           git add .
           git commit -m "image change"
-          git status
+   
           
-          git remote set-url origin https://Vaishnavi20011225:${{ secrets.TOKEN102 }}@github.com/Vaishnavi20011225/ss2.git
+          git remote set-url origin https://github.com/Vaishnavi20011225/ss2.git
                  
           git remote get-url origin
           git branch --show-current
