--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,17 +28,18 @@ jobs:
 
           git pull
           git add .
-          git commit -m "image change"
-          
+          git commit -m "update new image"
+                
+          git status
+                 
+                
           git remote set-url origin https://Vaishnavi20011225:${{ secrets.TOKEN102 }}@github.com/Vaishnavi20011225/ss2.git
                  
           git remote get-url origin
           git branch --show-current
-          echo "Git User Name: $(git config user.name)"
-          echo "Git User Email: $(git config user.email)"
-          echo "Git Remote URL: $(git config remote.origin.url)"
-          
+                 
           git push -u origin main
+                
           git status
    
           
