--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,14 +35,11 @@ jobs:
           git status
                  
                 
-          git remote set-url origin https://Vaishnavi20011225:${{ secrets.TOKEN102 }}@github.com/Vaishnavi20011225/ss2.git
+           git remote set-url origin https://Vaishnavi20011225:${{ secrets.TOKEN102 }}@github.com/Vaishnavi20011225/ss2.git
                  
-          git remote get-url origin
-          git branch --show-current
+           git remote get-url origin
+           git branch --show-current
                  
-          git push -u https://Vaishnavi20011225:${{ secrets.TOKEN102 }}@github.com/Vaishnavi20011225/ss2.git main
+           git push -u origin main
                 
-          git status
-   
-          
-          
+           git status
