--- a/deployment.yaml
+++ b/deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
         - name: ss2-container
-          image: vaishnaviwohlig/ss2:ba8fa007968c7c2a146f41863b8dd066c29cdf87
+          image: "vaishnaviwohlig/ss2:ba8fa007968c7c2a146f41863b8dd066c29cdf87"
           ports:
             - containerPort: 2000
